fix the side menu to always be visible

--- a/django/website/media/css/opencontracting_standard.css
+++ b/django/website/media/css/opencontracting_standard.css
@@ -96,3 +96,7 @@ h1.site-title {
 .under-standard-header {
 	margin-top: 96px;
 }
+
+.side-nav.affix {
+	max-width: 255px;
+}
